--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
         body{
             height: 100vh;
-            width: 100vh;
+            width: 100vw;
             background: black url(imagens/tela-home.jpg) top center/cover no-repeat;
         }
     </style>
