--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <section id="celular">
-            <iframe src="home.html" id="tela" frameborder="0" name="frame" scrolling="no"></iframe>
+            <iframe src="home.html" id="tela" frameborder="0" name="frame"></iframe>
     
         </section>
-        <section id="redes-sociais">
+        <section id="redes-sociais">         
             <ul>
                 <li><a href="home.html" target="frame"><img src="imagens/logo-home.jpg" alt=""></a></li>
- <!-- 
+ 
                 <li><a href="youtube.html" target="frame"><img src="imagens/logo-youtube.jpg" alt=""></a></li>
 
-                <li><a href="#" target="frame"><img src="imagens/logo-github.jpg" alt=""></a></li>
+                <li><a href="github.html" target="frame"><img src="imagens/logo-github.jpg" alt=""></a></li>
 
-                <li><a href="#" target="frame"><img src="imagens/logo-instagram.jpg" alt=""></a></li>
+                <li><a href="instagram.html" target="frame"><img src="imagens/logo-instagram.jpg" alt=""></a></li>
 
-                <li><a href="#" target="frame"><img src="imagens/logo-twitter.jpg" alt=""></a></li>
+                <li><a href="twitter.html" target="frame"><img src="imagens/logo-twitter.jpg" alt=""></a></li>
 
-                <li><a href="#" target="frame"><img src="imagens/logo-facebook.jpg" alt=""></a></li>
-            </ul> -->
+                <li><a href="facebook.html" target="frame"><img src="imagens/logo-facebook.jpg" alt=""></a></li>
+            </ul>
         </section>
     </main>
 </body>
